[package]
name = "cube-query"
version = "0.1.1"
edition = "2021"
description = "A tool for querying the CubeMX database"
license = "MIT"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
prettytable-rs = "0.10.0"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"


